# claimsintelligence

./: .gitignore  .markdownlint.json  README.md  TRANSPARENCY_FAQ.md  azure.yaml
docs/: API.md  (+10 more)
src/ContentProcessor/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  pytest.ini  requirements.txt
src/ContentProcessor/src/: main.py
src/ContentProcessor/src/libs/agent_framework/: agent_builder.py  agent_framework_helper.py  agent_framework_settings.py  agent_info.py  azure_openai_response_retry.py
src/ContentProcessor/src/libs/application/: __init__.py  application_configuration.py  application_context.py  env_config.py  service_config.py
src/ContentProcessor/src/libs/azure_helper/: __init__.py  app_configuration.py  azure_openai.py  comsos_mongo.py  content_understanding.py  cu_field_extractor.py  storage_blob.py
src/ContentProcessor/src/libs/base/: __init__.py  application_main.py  application_models.py
src/ContentProcessor/src/libs/models/: __init__.py  content_process.py
src/ContentProcessor/src/libs/pipeline/: __init__.py  pipeline_queue_helper.py  pipeline_step_helper.py  queue_handler_base.py
src/ContentProcessor/src/libs/process_host/: __init__.py  handler_process_host.py  handler_type_loader.py
src/ContentProcessor/src/libs/utils/: __init__.py  azure_credential_utils.py  base64_util.py  credential_util.py  stopwatch.py  utils.py
src/ContentProcessor/tests/: conftest.py
src/ContentProcessor/tests/unit/: test_main.py
src/ContentProcessor/tests/unit/agent_framework/: test_azure_openai_response_retry.py
src/ContentProcessor/tests/unit/application/: test_application_configuration.py  test_service_config.py
src/ContentProcessor/tests/unit/azure_helper/: test_analyzer_id_contract.py  test_content_understanding_model.py  test_cosmos_mongo.py  test_storage_blob.py
src/ContentProcessor/tests/unit/base/: test_application_models.py
src/ContentProcessor/tests/unit/pipeline/: test_comparison.py  test_confidence.py  test_evaluate_model.py  test_mime_types.py  test_pipeline_data.py  test_pipeline_file.py  test_pipeline_message_base.py  test_pipeline_queue_helper.py  test_pipeline_status.py  test_pipeline_step_helper.py  test_pipeline_step_result.py  test_queue_handler_base.py  test_schema.py
src/ContentProcessor/tests/unit/process_host/: test_handler_type_loader.py
src/ContentProcessor/tests/unit/utils/: test_azure_credential_utils.py  test_base64_util.py  test_stopwatch.py  test_utils.py
src/ContentProcessorAPI/: .dockerignore  .gitignore  Dockerfile  conftest.py  pyproject.toml  pytest.ini  requirements.txt
src/ContentProcessorAPI/app/: __init__.py  application.py  main.py
src/ContentProcessorAPI/app/libs/application/: application_configuration.py  application_context.py
src/ContentProcessorAPI/app/libs/azure/: foundry_agents.py  foundry_vision_classifier.py
src/ContentProcessorAPI/app/routers/: claimprocessor.py  claimsdemo.py  contentprocessor.py  http_probes.py  schemasetvault.py  schemavault.py
src/ContentProcessorAPI/app/tests/: test_main.py
src/ContentProcessorAPI/app/utils/: azure_credential_utils.py  mime_types.py  telemetry_filter.py  upload_validation.py
src/ContentProcessorAPI/samples/: README.md
src/ContentProcessorAPI/samples/claim_collision_commercial_hint/: README.md  generate_image.py  generate_pdfs.py
src/ContentProcessorAPI/samples/claim_demo_persona/: README.md  generate_pdfs.py
src/ContentProcessorAPI/samples/claim_hail_storm/: generate_pdfs.py
src/ContentProcessorAPI/samples/claim_theft_vandalism/: README.md  generate_pdfs.py
src/ContentProcessorAPI/samples/schemas/: AutoInsuranceClaimForm.json  DamagedVehicleImageAssessment.json  PoliceReportDocument.json  RepairEstimateDocument.json  schema_info.json
src/ContentProcessorAPI/tests/: conftest.py
src/ContentProcessorAPI/tests/helpers/: test_azure_credential_utils.py
src/ContentProcessorWorkflow/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
src/ContentProcessorWorkflow/src/: main.py  main_service.py
src/ContentProcessorWorkflow/src/libs/: __init__.py
src/ContentProcessorWorkflow/src/repositories/: claim_processes.py
src/ContentProcessorWorkflow/src/services/: content_process_models.py  content_process_service.py  queue_service.py
src/ContentProcessorWorkflow/src/steps/: claim_processor.py
src/ContentProcessorWorkflow/src/utils/: __init__.py  credential_util.py  http_request.py  logging_utils.py  prompt_util.py
src/ContentProcessorWorkflow/tests/: conftest.py
(+212 files in other folders)
