[project]
name = "contentprocessor"
version = "0.1.0"
description = "Claims Intelligence — Content Processing Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework==1.0.0b260127",
    "azure-ai-inference==1.0.0b9",
    "azure-appconfiguration==1.8.0",
    "azure-identity==1.26.0b1",
    "azure-monitor-opentelemetry==1.8.7",
    "azure-storage-blob==12.29.0b1",
    "azure-storage-queue==12.16.0b1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "opentelemetry-api==1.40.0",
    "pandas==3.0.2",
    "pydantic==2.13.3",
    "pydantic-settings==2.13.1",
    "pymongo==4.16.0",
    "python-dotenv==1.2.2",
    "tiktoken==0.12.0",
    "protobuf==6.33.6",
    "pyjwt==2.12.1",
    "pyasn1==0.6.3",
]


[dependency-groups]
dev = [
    "coverage==7.13.5",
    "pydantic==2.13.3",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "mongomock==4.3.0",
    "ruff==0.15.8",
]

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "-v --strict-markers --maxfail=5"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.poetry.scripts]
start-app = "src.main:main"
