[project]
name = "contentprocessorapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-appconfiguration==1.8.0",
    "azure-identity==1.26.0b1",
    "azure-storage-blob==12.29.0b1",
    "azure-storage-queue==12.16.0b1",
    "certifi==2026.2.25",
    "fastapi[standard]==0.135.2",
    "poppler-utils==0.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pygments==2.20.0",
    "pymongo==4.16.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "starlette==1.0.0",
    "uvicorn[standard]==0.42.0",
    "h11==0.16.0",
    "urllib3~=2.6.0",
    "opentelemetry-api==1.40.0",
    "sas-cosmosdb==0.1.4",
    "azure-monitor-events-extension>=0.1.0",
    "azure-monitor-opentelemetry==1.8.7",
    "cryptography==46.0.7",
    "pyjwt==2.12.1",
    "azure-ai-projects==2.1.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "coverage==7.13.5",
    "pre-commit==4.5.1",
    "ruff==0.15.8",
]

[tool.ruff.format]
line-ending = "auto"
